<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SchoolOne</string>
    <string name="no_internet_available">No internet available. Please try later!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="login_with_email">Login with Email</string>
    <string name="login_with_phone">Login with Phone</string>
    <string name="welcome_to">Welcome To</string>
    <string name="akshar_school_solutions">Akshar School Solutions</string>
    <string name="a_complete_digital_solution_for_school">A complete digital solution for school</string>
    <string name="username">Username</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="enter_your_username_and_password_to_login">Enter your username and password to login</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="i_want_to_login_with_phone_number">I want to login with Phone Number</string>
    <string name="error_please_enter_username">Please enter username</string>
    <string name="error_please_enter_password">Please enter password</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="enter_your_mobile_number_we_will_send_you_the">Enter your Mobile number, we will send you the</string>
    <string name="error_please_enter_phone_number">Please enter phone number</string>
    <string name="otp_for_verification_code">OTP for verification code</string>
    <string name="i_want_to_login_with_user_name">I want to login with Username</string>
    <string name="str_continue">Continue</string>
    <string name="error_please_enter_valid_phone_number">Please enter valid phone number</string>
    <string name="str_ok">Ok</string>
    <string name="we_have_sent_you_sms_on">We have sent you an SMS on +91 %s</string>
    <string name="with_6_digit_verification_code">with 6 digit verification code.</string>
    <string name="do_not_receive_the_code">Do not receive the code?</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="submit">Submit</string>
    <string name="go_back">Go Back</string>
    <string name="error_please_enter_otp">Please enter otp</string>
    <string name="by_signing_up_you_agree_with_our">By signing up, you agree with our</string>
    <string name="term_and_condition">&#160;term and condition</string>
    <string name="title_terms_and_condition">Terms &amp; Condition</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_class_selection">Select Class / Selection</string>
    <string name="attendance">Attendance</string>
    <string name="r_no">R.No.</string>
    <string name="student_name">Student Name</string>
    <string name="absent">Absent</string>
    <string name="late">Late</string>
    <string name="leave">Leave</string>
    <string name="on_leave">On leave</string>
    <string name="mark_all_as">Mark all as</string>
    <string name="present">Present</string>
    <string name="holiday">Holiday</string>
    <string name="week_off">Week - Off</string>
    <string name="select_your_class_amp_section"><![CDATA[Select your class & section]]></string>
    <string name="select_period">Select Period</string>
    <string name="select_class_section"><![CDATA[Select Class & Section]]></string>
    <string name="edit">Edit</string>
    <string name="gender">Gender :</string>
    <string name="blood_group">Blood Group :</string>
    <string name="admission_number">Admission Number :</string>
    <string name="opted_for_transport">Opted for Transport? :</string>
    <string name="parent_details">Parent Details</string>
    <string name="name">Name :</string>
    <string name="relation_ship">RelationShip : </string>
    <string name="mobile_no">Mobile No. :</string>
    <string name="address">Address</string>
    <string name="street">Street : </string>
    <string name="house_number">House Number :</string>
    <string name="city">City : </string>
    <string name="district">District : </string>
    <string name="state">State : </string>
    <string name="male">Male</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="female">Female</string>
    <string name="postal_code">Postal Code :</string>
    <string name="timeline">Today\'s Timeline</string>
    <string name="homework">Homework</string>
    <string name="birthday">Birthdays</string>
    <string name="reviewed">Reviewed</string>
    <string name="finance">Finance</string>
    <string name="overall_fee_amount">Overall Fee Amount</string>
    <string name="paid">Paid</string>
    <string name="due">Due</string>
    <string name="total_earning">Total Earning</string>
    <string name="you_have_not_created_any_homework_yet_nclick_on_bottom_to_create_homework">You have not created any homework yet \n Click + on bottom to create homework</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="material">Material</string>
    <string name="click_here_to_attach_file">Click here to attach file</string>
    <string name="points">Points</string>
    <string name="send">Send</string>
    <string name="save_draft">Save Draft</string>
    <string name="images">Images</string>
    <string name="c_lass">Class</string>
    <string name="section">Section</string>
    <string name="select_class">Select Class</string>
    <string name="select_section">Select Section</string>
    <string name="subject">Subject</string>
    <string name="exam_name">Exam Name</string>
    <string name="c_ontinue">Continue</string>
    <string name="maximum_marks">Maximum Marks :</string>
    <string name="obtained_marks">Obtained Marks</string>
    <string name="current_pin">Current Pin</string>
    <string name="new_pin">New Pin</string>
    <string name="confirm_pin">Confirm Pin</string>
    <string name="change_pin">Change Pin</string>
    <string name="final_amount">Final Amount</string>
    <string name="over_due_amount">Over Due Amount</string>
    <string name="pay">Pay</string>
    <string name="total_amount">Total Amount</string>
    <string name="school_fee">School Fee</string>
    <string name="tution_fee">Tution Fee</string>
    <string name="invoice">Invoice :</string>
    <string name="download_invoice">Download Invoice</string>
    <string name="payment_method">Payment Method :</string>
    <string name="fee_head">Fee Head</string>
    <string name="due_date">Due Date</string>
    <string name="term">Term</string>
    <string name="amount">Amount</string>
    <string name="concession">Concession</string>
    <string name="due_amount">Due Amount</string>
    <string name="pay_all">Pay all</string>
    <string name="payment_date">Payment Date :</string>
    <string name="recieved_by">Received By :</string>
    <string name="remarks">Remarks</string>
    <string name="bank_account">Bank Account</string>
    <string name="enter_new_password_to_change_your_current_password">Enter New Password to change your current password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="change">Change</string>
    <string name="enter_your_email_to_change_password">Enter your email to change password</string>
    <string name="dashboard">Dashboard</string>
    <string name="timetable">Timetable</string>
    <string name="student_profile">Student Profile</string>
    <string name="attendance_entry">Attendance Entry</string>
    <string name="assign_homework">Assign Homework</string>
    <string name="notice_board">Notice board</string>
    <string name="marks_entry">Student Marks</string>
    <string name="exam_schedule">Exam Schedule</string>
    <string name="fee_amp_payment"><![CDATA[Fees & Payments]]></string>
    <string name="message_center">Message Center</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="view_profile">View Profile</string>
    <string name="absent_report">Absent Report</string>
    <string name="marks_report">Marks Report</string>
    <string name="employee_notification">Employee \n Notification</string>
    <string name="general_n_notification">General \n Notification</string>
    <string name="late_entry">Late Entry</string>
    <string name="select_date">Select Date</string>
    <string name="select_all">Select All</string>
    <string name="date">Date</string>
    <string name="recent">Recent</string>
    <string name="notice_board_is_empty_please_click_on_n_bottom_to_add_one">Notice board is empty, please click + on \n  bottom to add one</string>
    <string name="cancel">Cancel</string>
    <string name="collection">Collection</string>
    <string name="maintenance">Maintenance</string>
    <string name="transport">Transport</string>
    <string name="over_due">Over due</string>
    <string name="admission_fee">Admission Fee</string>
    <string name="expences">Expenses</string>
    <string name="total_collection">Total collection</string>
    <string name="total_expences">Total Expenses</string>
    <string name="week">Week</string>
    <string name="by_feahead">By Fee Head</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="year">This year</string>
    <string name="month">This Month</string>
    <string name="by_payment_method">By Payment Method</string>
    <string name="small_payment_method">By PM</string>
    <string name="next_7_days">Next 7 days</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="home">Home</string>
    <string name="birthday_not_found">No Birthday found</string>
    <string name="see_all">See All</string>
    <string name="this_week">This Week</string>
    <string name="no_timetable_found">No TimeTable found</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="parent_name">Parent Name</string>
    <string name="roll_number">Roll number : </string>
    <string name="email_address">Email Address :</string>
    <string name="firstname">First Name :</string>
    <string name="last_name">Last Name :</string>
    <string name="student_list">Student List</string>
    <string name="create_profile">Create Profile</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="admissionNumber">Admission Number</string>
    <string name="rollNumber">Roll Number</string>
    <string name="namee">Name</string>
    <string name="relationShip">Relation ship</string>
    <string name="city_">City</string>
    <string name="street_">Street</string>
    <string name="house_number_">House Number</string>
    <string name="district_">District</string>
    <string name="postal_code_">Postal Code</string>
    <string name="choose_class_and_section">Choose class and section</string>
    <string name="no_students_found">No students found</string>
    <string name="permissionNeccesary">Kindly grant permission to take pictures</string>
    <string name="noConnection">No internet connection</string>
    <string name="turnOnInternet">Turn on internet</string>
    <string name="mobileData">Mobile data</string>
    <string name="Wifi">Wifi</string>
    <string name="delete">Delete</string>
    <string name="target_audience">Target Audience</string>
    <string name="parents">Parents</string>
    <string name="employees">Employees</string>
    <string name="setup_pin">Setup Pin</string>
    <string name="trouble_in_login_question_mark">Trouble in login?</string>
</resources>